# sanctum

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SANCTUM_FOR_AGENTS.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  vite.config.ts
.github/: SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml  security_disclosure.md
.github/workflows/: ci.yml  release.yml
dist-isolation/: index.html  index.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json  tool-default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_schema.sql
src-tauri/sbom/: README.md
src-tauri/signing/: README.md
src-tauri/src/: db.rs  device_broker.rs  lib.rs  main.rs  models.rs  policy.rs  registry.rs  signing.rs
src-tauri/src/commands/: approvals.rs  ingest.rs  library.rs  mod.rs  runner.rs  scan.rs  versioning.rs
src/components/: IngestBar.tsx  InspectView.tsx  Library.tsx  PermissionBadge.tsx  ToolCard.tsx
src/components/ui/: badge.tsx  button.tsx  scroll-area.tsx  separator.tsx  switch.tsx  tabs.tsx  tooltip.tsx
src/lib/: commands.ts  types.ts  utils.ts
